# trade-union

./: .gitignore  AddEmailsToDistList.ps1  README.md  RELEASE_ASSETS_v1.1.0_SHA256.txt  RELEASE_ASSETS_v1.1.8_SHA256.txt  RELEASE_ASSETS_v1.1.9_SHA256.txt  RELEASE_CHECKLIST_v1.1.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.7.md  RELEASE_NOTES_v1.1.8.md  RELEASE_NOTES_v1.1.9.md  cli.py  index.html  package-lock.json  package.json  project_analysis.md  test_trade_union.py  trade_union.py  tsconfig.json  vite.config.ts
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scripts/: detect_group_type.ps1  finalize_group.ps1  manage_distribution_group.ps1  single_email_action.ps1
src-tauri/src/: main.rs
tests/: clear-bulk-input-ui.test.mjs
