[package]
name = "trade_union_mini_app"
version = "0.1.0"
description = "Tauri mini app for add/remove users in Trade Union group"
authors = ["Trade Union Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

